Hopefully fix weird gap at bottom, tweak menus

--- a/css/notepad.css
+++ b/css/notepad.css
@@ -8,9 +8,12 @@ html {
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100vh;
   font-family: "Segoe UI", "Open Sans", sans-serif;
   font-size: 0.8em;
+
+  display: flex;
+  flex-direction: column;
 }
 
 /* Title bar */
@@ -82,6 +85,8 @@ textarea:focus { outline: none; }
   margin-left: auto;
   border: 1px solid transparent;
   border-bottom: none;
+
+  flex: 1;
 }
 
 /* Disable textarea's inherent word wrapping */
@@ -116,23 +121,23 @@ textarea.no-word-wrap {
 }
 
 .menu-context {
-  margin-top: -0.2em;
+  margin-top: 4.1em;
   margin-left: 5em;
   width: 10.5em;
   min-height: 1.1em;
   padding-top: 0.1em;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.3em;
   position: absolute;
   display: none;
 
-  box-shadow: 1px 0.2em 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 1px 2px #808080;
+  line-height: 1.42;
 }
 .menu-context.visible { display: block; }
 
 .menu-context .area-check {
   float: left;
   width: 19%;
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
   margin-right: 0.3em;
 }
 .menu-context .area-check input { margin-left: 0.6em; }
